add currentTime and update git ignore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="navbar">
   <div class="data">
-    <p class="date">19</p>
+    <p class="date">{{date.date}}</p>
     <div class="month-year">
-      <p>September</p>
-      <p>2019</p>
+      <p>{{date.month}}</p>
+      <p>{{date.year}}</p>
     </div>
   </div>
   <div class="day">
-    Thursday
+    {{date.day}}
   </div>
 </div>
 <div class="todo-container">
